[package]
name = "blades-kroki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blades = { git = "https://github.com/grego/blades", default_features = false }
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "1"
rayon = "1.5"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bincode = "1.2.3"
beef = "0.5.1"
nohash-hasher = "0.2"
fnv = "1"
base64 = "0.13"
clap = "2.34"